1. Converted to Java9 2. New "main" method in DbPipe plus As convertors 3. Test class in  SimpleUseCase